before json update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,44 @@
 <resources>
     <string name="app_name">Prayer Time</string>
+    <string name="location_text">Location</string>
+    <string name="prayer_bar_text">Start your day with these prayers</string>
+    <string name="remaining_time_text">Remaining time to next prayer</string>
+    <string name="morning">Morning</string>
+    <string name="noon">Noon</string>
+    <string name="afternoon">Afternoon</string>
+    <string name="evening">Evening</string>
+    <string name="night">Night</string>
+    <string name="prayer_tracker">Prayer Tracker</string>
+    <string name="pray_together">Prayer Together</string>
+    <string name="daily_prayer">Daily Prayer</string>
+    <string name="see_all">See All</string>
+    <string name="home">Home</string>
+    <string name="qibla">Qibla</string>
+    <string name="settings">Settings</string>
+    <string name="utilities">Utilities</string>
+    <string name="kaaba_text">Please rotate your phone until the Kaaba image is within the circle to find the Qibla direction.</string>
+    <string name="kaaba_angle">Kaaba angle</string>
+    <string name="your_angle">Your angle</string>
+    <string name="appearance">Appearance</string>
+    <string name="light">Lıght</string>
+    <string name="dark">Dark</string>
+    <string name="system_default">System_default</string>
+    <string name="notification">Notification</string>
+    <string name="vibration">Vibration</string>
+    <string name="alarm">Alarm</string>
+    <string name="others">Others</string>
+    <string name="mute_friday">Mute during friday prayers</string>
+    <string name="prayer">Prayer</string>
+    <string name="quran">Quran</string>
+    <string name="esmaul_husna">Esmaul Husna</string>
+    <string name="islamic_calendar">Islamic Calendar</string>
+    <string name="hadith">Hadith</string>
+    <string name="alarms">Alarms</string>
+    <string name="change_sound">Change the sound</string>
+    <string name="min_ago">min. ago</string>
+    <string name="pray_category_details">Pray Category Detail</string>
+    <string name="prayer_detail">Prayer Detail</string>
+    <string name="hadith_collection">Hadith Collection</string>
+    <string name="number_of_prayers">Number of prayers in this category</string>
+    <string name="hadith_section_detail">Hadith Section Detail</string>
 </resources>
