--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -42,4 +42,6 @@
     <string name="hadith_collection">Hadith Collection</string>
     <string name="number_of_prayers">Bu kategorideki dua sayısı</string>
     <string name="hadith_section_detail">Hadith Section Detail</string>
+    <string name="favorites">Favoriler</string>
+    <string name="statistics">İstatistikler</string>
 </resources>
