--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -50,4 +50,7 @@
     <string name="remove_from_favorites">Favorilerden kaldır</string>
     <string name="add_to_favorites">Favorilere ekle</string>
     <string name="are_you_sure_delete_favorite">Bu öğeyi favorilerden kaldırmak istediğinizden emin misiniz?</string>
+    <string name="did_u_pray">Did you pray the last prayer?</string>
+    <string name="yes">Evet</string>
+    <string name="no">Hayır</string>
 </resources>
