--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="remove_from_favorites">Remove from favorites</string>
     <string name="add_to_favorites">Add to favorites</string>
     <string name="are_you_sure_delete_favorite">Are you sure you want to remove this item from your favorites?</string>
+    <string name="did_u_pray">Did you pray the last prayer?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
