--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -53,4 +53,5 @@
     <string name="did_u_pray">Did you pray the last prayer?</string>
     <string name="yes">Evet</string>
     <string name="no">Hayır</string>
+    <string name="pray_alarm_message">Ezan vakti</string>
 </resources>
