--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -50,7 +50,11 @@
     <string name="remove_from_favorites">Favorilerden kaldır</string>
     <string name="add_to_favorites">Favorilere ekle</string>
     <string name="are_you_sure_delete_favorite">Bu öğeyi favorilerden kaldırmak istediğinizden emin misiniz?</string>
-    <string name="did_u_pray">Did you pray the last prayer?</string>
+    <string name="did_u_pray_the_morning_prayer">Sabah namazını kıldın mı?</string>
+    <string name="did_u_pray_the_noon_prayer">Öğle namazını kıldın mı?</string>
+    <string name="did_u_pray_the_afternoon_prayer">İkindi namazını kıldın mı?</string>
+    <string name="did_u_pray_the_evening_prayer">Akşam namazını kıldın mı?</string>
+    <string name="did_u_pray_the_night_prayer">Yatsı namazını kıldın mı?</string>
     <string name="yes">Evet</string>
     <string name="no">Hayır</string>
     <string name="pray_alarm_message">Ezan vakti</string>
