--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,11 @@
     <string name="remove_from_favorites">Remove from favorites</string>
     <string name="add_to_favorites">Add to favorites</string>
     <string name="are_you_sure_delete_favorite">Are you sure you want to remove this item from your favorites?</string>
-    <string name="did_u_pray">Did you pray the last prayer?</string>
+    <string name="did_u_pray_the_morning_prayer">Did you pray the morning prayer?</string>
+    <string name="did_u_pray_the_noon_prayer">Did you pray the noon prayer?</string>
+    <string name="did_u_pray_the_afternoon_prayer">Did you pray the afternoon prayer?</string>
+    <string name="did_u_pray_the_evening_prayer">Did you pray the evening prayer?</string>
+    <string name="did_u_pray_the_night_prayer">Did you pray the night prayer?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="pray_alarm_message">Prayer Time</string>
