--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,14 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="pray_alarm_message">Prayer Time</string>
+    <string name="last_7_days">Last 7 days</string>
+    <string name="last_30_days">Last 30 days</string>
+    <string name="last_3_months">Last 3 months</string>
+    <string name="all_times">All Times</string>
+    <string name="select_date_range">Select Date Range</string>
+    <string name="completed_pray">Completed prayer</string>
+    <string name="missed_pray">Missed prayer</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="total_prayer">Total Prayer</string>
 </resources>
