--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="start_date">Start Date</string>
     <string name="end_date">End Date</string>
     <string name="total_prayer">Total Prayer</string>
+    <string name="statistics_detail">Statistics Detail</string>
 </resources>
