--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -68,4 +68,5 @@
     <string name="start_date">Başlangıç Tarihi</string>
     <string name="end_date">Bitiş Tarihi</string>
     <string name="total_prayer">Toplam Namaz</string>
+    <string name="statistics_detail"> Detaylı İstatistikler</string>
 </resources>
