--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -95,4 +95,14 @@
     <string name="islamic_day">Hicri gün</string>
     <string name="islamic_month">Hicri ay</string>
     <string name="today">Bugün</string>
+    <string name="close">Kapat</string>
+    <string name="listen">Dinle</string>
+    <string name="juz_number">%d. Cüz</string>
+    <string name="alarm_offset_format">%d dak. önce</string>
+    <string name="alarm_icon">Alarm simgesi</string>
+    <string name="location_icon">Konum simgesi</string>
+    <string name="check_icon">Onay simgesi</string>
+    <string name="arrow_icon">Ok simgesi</string>
+    <string name="notification_icon">Bildirim simgesi</string>
+    <string name="main_view">Ana Görünüm</string>
 </resources>
