font size included

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -105,4 +105,49 @@
     <string name="arrow_icon">Ok simgesi</string>
     <string name="notification_icon">Bildirim simgesi</string>
     <string name="main_view">Ana Görünüm</string>
+    <!-- Quran Detail Screen Strings -->
+    <string name="quran_verse">Ayet: %1$d</string>
+    <string name="quran_verse_number">Ayet numarası</string>
+    <string name="quran_unknown_error">Bilinmeyen bir hata oluştu</string>
+    <string name="quran_verse_icon">Ayet ikonu</string>
+    <string name="quran_settings">Ayarlar</string>
+    <string name="quran_playback_speed">Oynatma Hızı</string>
+    <string name="quran_auto_hide_player">Oynatıcıyı Otomatik Gizle</string>
+    <string name="quran_cache_audio">Ses Dosyalarını Önbelleğe Al</string>
+    <string name="quran_cache_info">Önbellek Bilgisi</string>
+    <string name="quran_translation">Çeviri</string>
+    <string name="quran_transliteration">Okunuş</string>
+    <string name="quran_reciter">Okuyucu</string>
+    <string name="quran_settings_title">Kuran Ayarları</string>
+    <string name="quran_previous">Önceki</string>
+    <string name="quran_next">Sonraki</string>
+    <string name="quran_play">Oynat</string>
+    <string name="quran_pause">Duraklat</string>
+    <string name="quran_select_translation">Çeviri Seçin</string>
+    <string name="quran_select_reciter">Okuyucu Seçin</string>
+    <string name="quran_select_transliteration">Transliterasyon Seçin</string>
+    <string name="quran_language_text_settings">Dil ve Metin Ayarları</string>
+    <string name="quran_reciter_settings">Okuyucu</string>
+    <string name="quran_translation_settings">Çeviri</string>
+    <string name="quran_transliteration_settings">Transliterasyon</string>
+    <string name="quran_playback_settings">Oynatma Ayarları</string>
+    <string name="quran_auto_hide_player_description">Oynatıcı kontrollerini 7 saniye sonra otomatik gizle</string>
+    <string name="quran_cache_audio_enabled">Çevrimdışı dinleme için ses verileri kaydediliyor</string>
+    <string name="quran_cache_audio_disabled">Ses verileri kaydedilmiyor</string>
+    <string name="quran_playback_mode">Oynatma Modu</string>
+    <string name="quran_play_by_verse">Ayet ayet</string>
+    <string name="quran_play_by_surah">Sure sure</string>
+    <string name="quran_cache_audio_description">Ses verilerini cihazınıza kaydettiğinizde şu avantajlara sahip olursunuz:</string>
+    <string name="quran_cache_audio_advantage">Çevrimdışı dinleme imkanı</string>
+    <string name="quran_cache_audio_advantage_2">Daha hızlı yükleme süreleri</string>
+    <string name="quran_cache_audio_advantage_3">Daha az internet kullanımı</string>
+    <string name="quran_cache_audio_disadvantage">Dezavantajları:</string>
+    <string name="quran_cache_audio_disadvantage_1">Cihazınızda depolama alanı kullanır (Sure başına yaklaşık 1-2 MB)</string>
+    <string name="quran_cache_audio_save">Kaydet</string>
+    <string name="quran_cache_audio_save_alternative">Kaydetme</string>
+    <string name="quran_font_size">Yazı Boyutu</string>
+    <string name="quran_font_size_description">Daha iyi okunabilirlik için yazı boyutunu ayarlayın</string>
+    <string name="quran_font_size_small">Küçük</string>
+    <string name="quran_font_size_medium">Orta</string>
+    <string name="quran_font_size_large">Büyük</string>
 </resources>
