--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="total_prayer">Total Prayer</string>
     <string name="statistics_detail">Statistics Detail</string>
     <string name="quran_detail">Quran</string>
-    <string name="quran_juz_detail">Kuran Cüzü</string>
+    <string name="quran_juz_detail">Quran Juz</string>
     <!-- Quran Audio Service Strings -->
     <string name="quran_audio_channel_name">Quran Audio</string>
     <string name="quran_audio_channel_description">Quran audio controls</string>
@@ -105,4 +105,49 @@
     <string name="arrow_icon">Arrow icon</string>
     <string name="notification_icon">Notification icon</string>
     <string name="main_view">Main View</string>
+    <!-- Quran Detail Screen Strings -->
+    <string name="quran_verse">Verse: %1$d</string>
+    <string name="quran_verse_number">Verse number</string>
+    <string name="quran_unknown_error">Unknown error occurred</string>
+    <string name="quran_verse_icon">Verse icon</string>
+    <string name="quran_settings">Settings</string>
+    <string name="quran_playback_speed">Playback Speed</string>
+    <string name="quran_auto_hide_player">Auto Hide Player</string>
+    <string name="quran_cache_audio">Cache Audio Files</string>
+    <string name="quran_cache_info">Cache Information</string>
+    <string name="quran_translation">Translation</string>
+    <string name="quran_transliteration">Transliteration</string>
+    <string name="quran_reciter">Reciter</string>
+    <string name="quran_settings_title">Quran Settings</string>
+    <string name="quran_previous">Previous</string>
+    <string name="quran_next">Next</string>
+    <string name="quran_play">Play</string>
+    <string name="quran_pause">Pause</string>
+    <string name="quran_select_translation">Select Translation</string>
+    <string name="quran_select_reciter">Select Reciter</string>
+    <string name="quran_select_transliteration">Select Transliteration</string>
+    <string name="quran_language_text_settings">Language and Text Settings</string>
+    <string name="quran_reciter_settings">Reciter</string>
+    <string name="quran_translation_settings">Translation</string>
+    <string name="quran_transliteration_settings">Transliteration</string>
+    <string name="quran_playback_settings">Playback Settings</string>
+    <string name="quran_auto_hide_player_description">Automatically hide player controls after 7 seconds</string>
+    <string name="quran_cache_audio_enabled">Audio files are being saved for offline listening</string>
+    <string name="quran_cache_audio_disabled">Audio files are not being saved</string>
+    <string name="quran_playback_mode">Playback Mode</string>
+    <string name="quran_play_by_verse">Verse by verse</string>
+    <string name="quran_play_by_surah">Surah by surah</string>
+    <string name="quran_cache_audio_description">When you save audio files to your device, you get these advantages:</string>
+    <string name="quran_cache_audio_advantage">Offline listening capability</string>
+    <string name="quran_cache_audio_advantage_2">Faster loading times</string>
+    <string name="quran_cache_audio_advantage_3">Less internet usage</string>
+    <string name="quran_cache_audio_disadvantage">Disadvantages:</string>
+    <string name="quran_cache_audio_disadvantage_1">Uses storage space on your device (approximately 1-2 MB per surah)</string>
+    <string name="quran_cache_audio_save">Save</string>
+    <string name="quran_cache_audio_save_alternative">Don\'t Save</string>
+    <string name="quran_font_size">Font Size</string>
+    <string name="quran_font_size_description">Adjust text size for better readability</string>
+    <string name="quran_font_size_small">Small</string>
+    <string name="quran_font_size_medium">Medium</string>
+    <string name="quran_font_size_large">Large</string>
 </resources>
