--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,9 +79,7 @@
     <string name="quran_audio_next">Next</string>
     <string name="quran_audio_pause">Pause</string>
     <string name="quran_audio_play">Play</string>
-    <string name="quran_audio_error_generic">An error occurred</string>
     <string name="quran_audio_error_playback">Audio file could not be played</string>
-    <string name="quran_audio_error_download">Audio file could not be downloaded</string>
     <!-- Common UI Strings -->
     <string name="click_to_refresh">Click to refresh</string>
     <string name="retry">Retry</string>
@@ -155,11 +153,12 @@
     <string name="quran_font_size_medium">Medium</string>
     <string name="quran_font_size_large">Large</string>
     <!-- Settings Screen -->
-    <string name="audio_settings">Ses Ayarları</string>
-    <string name="main_volume">Ana Ses Seviyesi</string>
-    <string name="adhan_volume">Ezan Sesi</string>
-    <string name="fade_effect">Fade Efekti</string>
-    <string name="fade_effect_description">Ses geçişlerini yumuşat</string>
-    <string name="vibration_description">Bildirimler için titreşim</string>
-    <string name="mute_friday_description">Cuma günü otomatik sessiz mod</string>
+
+    <string name="vibration_description">Vibration for notifications</string>
+    <string name="mute_friday_description">Mute at friday prayer time</string>
+    <string name="quran_audio_error_timeout">Connection timed out. Please try again.</string>
+    <string name="quran_audio_error_network">Please check your internet connection and try again.</string>
+    <string name="quran_audio_error_state">An error occurred while playing the audio file.</string>
+    <string name="quran_audio_error_generic">An unexpected error occurred. Please try again.</string>
+    <string name="quran_audio_error_download">An error occurred while downloading the audio file.</string>
 </resources>
