--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Namaz Zamanı</string>
+    <string name="app_name">Namaz Vakitleri Pro: Ezan, Kıble, Kuran</string>
     <string name="location_text">Konum</string>
     <string name="prayer_bar_text">Gününüze bu dualarla başlayın</string>
     <string name="remaining_time_text">Sonraki namaza kalan süre</string>
@@ -167,6 +167,14 @@
     <string name="source">Kaynak: %s</string>
     <string name="select_prayer_calculation_method">Namaz Vakti Hesaplama Metodunu Seçin</string>
     <string name="face_icon">Yüz İkonu</string>
+    
+    <!-- Prayer Time Calculation Settings -->
+    <string name="prayer_time_calculation">Namaz Vakti Hesaplama</string>
+    <string name="calculation_method">Hesaplama Yöntemi</string>
+    <string name="prayer_time_adjustments">Namaz Vakti Ayarlamaları</string>
+    <string name="prayer_time_adjustments_description">Bulunduğunuz konum için namaz vakitlerinde ince ayar yapın</string>
+    <string name="prayer_time_adjustments_tune_description">Her namaz vaktini dakika cinsinden ayarlayın. Pozitif değerler namaz vaktini ileriye, negatif değerler geriye alacaktır.</string>
+    <string name="apply">Uygula</string>
     
     <!-- Weather Card Strings -->
     <string name="weather_data_unavailable">Hava durumu bilgisi alınamadı.</string>
